--- a/read/index.html
+++ b/read/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-cn">
 	<head>
 			<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,10 +15,10 @@
 		color: ;
 		}
 		</style>
-		<link rel="stylesheet" type="text/css" href="http://example.org/css/default.css" />
-		<link rel="stylesheet" type="text/css" href="http://example.org/css/component.css" />
+		<link rel="stylesheet" type="text/css" href="https://gudu.me/readcss/default.css" />
+		<link rel="stylesheet" type="text/css" href="https://gudu.me/readcss/component.css" />
 		
-		<script src="http://example.org/js/modernizr.custom.js"></script>
+		<script src="https://gudu.me/readjs/modernizr.custom.js"></script>
 
 	
 <script>
