--- a/read/index.html
+++ b/read/index.html
@@ -15,10 +15,10 @@
 		color: ;
 		}
 		</style>
-		<link rel="stylesheet" type="text/css" href="https://gudu.me/readcss/default.css" />
-		<link rel="stylesheet" type="text/css" href="https://gudu.me/readcss/component.css" />
+		<link rel="stylesheet" type="text/css" href="https://gudu.me/read/css/default.css" />
+		<link rel="stylesheet" type="text/css" href="https://gudu.me/read/css/component.css" />
 		
-		<script src="https://gudu.me/readjs/modernizr.custom.js"></script>
+		<script src="https://gudu.me/read/js/modernizr.custom.js"></script>
 
 	
 <script>
