--- a/read/index.html
+++ b/read/index.html
@@ -4,7 +4,7 @@
 			<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>阅读</title>
+		<title>阅读中</title>
 		<meta name="description" content="Hugrid - grid theme for Hugo with an expanding image preview." />
 		<meta name="keywords" content="Hugo, Hugo theme, grid theme, portfolio, bookmarks, collection, contacts" />
 		<meta name="author" content="Pavel Kanyshev" />
@@ -35,7 +35,7 @@ ga('send', 'pageview');
 	<body>
 		<div class="container">	
 							<header class="clearfix">
-				<h1>阅读<span>读一本好书，就是和许多高尚的人谈话。 &mdash;歌德</span></h1>
+				<h1>阅读中<span>读一本好书，就是和许多高尚的人谈话。 &mdash;歌德</span></h1>
 			</header>
 			<div class="main">
 				<ul id="og-grid" class="og-grid">
@@ -43,6 +43,12 @@ ga('send', 'pageview');
 					<li>
 						<a href="https://book.douban.com/subject/1004699/" data-largesrc="https://gss0.bdstatic.com/94o3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike220%2C5%2C5%2C220%2C73/sign=36d2c10ec41b9d169eca923392b7dfea/bd3eb13533fa828be60ace32f71f4134970a5a31.jpg" data-title="作为意志和表象的世界" data-description="“世界是我的意志、世界是我的表象。”完成这本书的时候，叔本华只有28岁，这部后来影响了包括尼采、瓦格纳、托玛斯·曼甚至存在主义的哲学名作，包含了叔本华哲学的一切细节，其后他漫长一生都只不过是在解释或补充这部著作。" data-buttontext="">
 							<img src="https://img11.360buyimg.com/n1/s200x200_jfs/t151/244/2029088193/33860/6ae38803/53c04eb6N837b1202.jpg" alt="Hugrid Theme"/>
+						</a>
+					</li>
+					
+					<li>
+						<a href="https://book.douban.com/subject/26709765/" data-largesrc="https://img3.doubanio.com/lpic/s28384476.jpg" data-title="西方哲学史" data-description="罗素（1872—1970），当今时代理性主义和人道主义的代言人，是西方思想解放与言论自由的见证人。作为哲学家，罗素的主要贡献在于数理逻辑方面，是逻辑原子论和新实在论的主要创始人之一。" data-buttontext="">
+							<img src="https://img14.360buyimg.com/n1/s200x200_jfs/t1957/354/194545166/204087/ab215e73/55f675fdN6f99feba.jpg" alt="Hugrid Theme"/>
 						</a>
 					</li>
 					
